--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Wellcome to the Cecep Pages!
-description: I am very happy, if we help you..
+description: I am very happy, if we help you. Thanks..
